# tictactoe-course

./: .gitignore  CMakeLists.txt  README.md  bash.sh  shell.nix
libs/: libtttcore.a-arm64
src/core/: baseline.hpp  event.cpp  event.hpp  field.cpp  field.hpp  game.cpp  game.hpp  state.cpp  state.hpp  utils.cpp  utils.hpp
src/player/: human_player.cpp  my_observer.cpp  my_observer.hpp  my_player.cpp  my_player.hpp
src/remote/: CMakeLists.txt  README.md  cli_client.cpp  cli_server.cpp  cli_utils.hpp  client.cpp  client.hpp  dto.proto  dto_utils.cpp  dto_utils.hpp  server.cpp  server.hpp  zmq_utils.hpp
tests/: CMakeLists.txt  human_player.cpp  human_player.hpp  new_stat_test.cpp  test_baseline.cpp  test_my_player.cpp  test_my_player_vs_human.cpp  test_stats.cpp  test_stats.hpp  test_stats_baseline_easy.cpp  test_stats_baseline_hard.cpp  test_stats_vs_baseline.cpp
